<resources>
    <string name="app_name">NTGage</string>
    <string name="measuring">Measuring</string>
    <string name="data_query">Data duery</string>
    <string name="parameter_management">Param</string>
    <string name="calibration">Calibration</string>
    <string name="user_management">User</string>
    <string name="program_management">Program</string>
    <string name="system_management">System</string>
    <string name="store">Store</string>
    <string name="spc_analysis">SPC</string>
    <string name="statistical_report">Report</string>
    <string name="main_title">DeskTop</string>
    <string name="describe">Describe</string>
    <string name="nominal_value">Nominal</string>
    <string name="upper_tolerance_value">UT</string>
    <string name="lower_tolerance_value">LT</string>
    <string name="resolution">Resolution</string>
    <string name="deviation">Offset</string>
    <string name="formula">Formula</string>
    <string name="m_group">Grouping</string>
    <string name="save">Save</string>
    <string name="m1_group">M1 Group</string>
    <string name="m2_group">M2 Group</string>
    <string name="m3_group">M3 Group</string>
    <string name="m4_group">M4 Group</string>
    <string name="m2_formula">M2 Formula</string>
    <string name="m1_formula">M1 Formula</string>
    <string name="m3_formula">M3 Formula</string>
    <string name="m4_formula">M4 Formula</string>
    <string name="name">Name</string>
    <string name="lower_limit">Lower limit</string>
    <string name="upper_limit">Upper limit</string>
    <string name="set">Set</string>
    <string name="set_only">设置</string>
    <string name="small_part_standard">Small part standard</string>
    <string name="big_part_standard">Big part standard</string>
    <string name="upper_limit_of_information_rate">Upper limit of information rate</string>
    <string name="lower_confidence_limit">Lower confidence limit</string>
    <string name="compensation_value">Compensation value</string>
    <string name="ch1">CH1</string>
    <string name="ch2">CH2</string>
    <string name="ch3">CH3</string>
    <string name="ch4">CH4</string>
    <string name="small_piece_ad">Small piece AD</string>
    <string name="big_piece_ad">Big piece AD</string>
    <string name="measure_ad">Measure AD</string>
    <string name="measure_value">Measure</string>
    <string name="calibration_method">Calibration Method</string>
    <string name="calibration_save">校验保存</string>
    <string name="select_all">Select All</string>
    <string name="samll_part_value">Small P value</string>
    <string name="big_part_value">Big P value</string>
    <string name="code_num">Code Num</string>
    <string name="code_name">Code Name</string>
    <string name="code1_name">Code 1</string>
    <string name="code2_name">Code 2</string>
    <string name="code3_name">Code 3</string>
    <string name="code4_name">Code 4</string>
    <string name="code5_name">Code 5</string>
    <string name="code6_name">Code 6</string>
    <string name="code7_name">Code 7</string>
    <string name="code8_name">Code 8</string>
    <string name="code9_name">Code 9</string>
    <string name="code10_name">Code 10</string>
    <string name="code11_name">Code 11</string>
    <string name="on_job">On Job</string>
    <string name="leave_job">Leave Job</string>
    <string name="status">Status</string>
    <string name="id">ID</string>
    <string name="email">Email</string>
    <string name="accout">Accout</string>
    <string name="communication">Communication</string>
    <string name="io">I/O</string>
    <string name="system_backup">System backup</string>
    <string name="force_calibration">Force calibration</string>
    <string name="store_method">Store Method</string>
    <string name="automatic">Automatic</string>
    <string name="manual">Manual</string>
    <string name="store_condition">Store Condition</string>
    <string name="second">Second</string>
    <string name="mm">mm</string>
    <string name="retention_time">Retention time</string>
    <string name="total_production">Total production</string>
    <string name="qualified_number">Qualified</string>
    <string name="defective">Defective</string>
    <string name="delete_statistical">Delete Statistical</string>
    <string name="delete_result">Delete result</string>
    <string name="handler">Handler</string>
    <string name="time">Time</string>
    <string name="workpiece_id">WorkpieceID</string>
    <string name="event">Event</string>
    <string name="result">Result</string>
    <string name="m1">M1</string>
    <string name="m2">M2</string>
    <string name="m3">M3</string>
    <string name="m4">M4</string>
    <string name="get_value">GetValue</string>
    <string name="additional">Additional</string>
    <string name="swap">Swap</string>
    <string name="unqualified_number">Unqualified</string>
    <string name="DRate">Defective Rate</string>
    <string name="statistical_p">分析参数</string>
    <string name="handler_line">HLine</string>
    <string name="group_describe">描述</string>
    <string name="text1">显示文本框</string>
    <string name="relative">布局</string>
    <string name="btn_1">1</string>
    <string name="btn_2">2</string>
    <string name="btn_3">3</string>
    <string name="btn_4">4</string>
    <string name="btn_5">5</string>
    <string name="btn_6">6</string>
    <string name="btn_7">7</string>
    <string name="btn_8">8</string>
    <string name="btn_9">9</string>
    <string name="btn_0">0</string>
    <string name="btn_clear">清空</string>
    <string name="btn_plus">+</string>
    <string name="btn_minus">-</string>
    <string name="btn_multiply">×</string>
    <string name="btn_divide">÷</string>
    <string name="btn_equal">=</string>
    <string name="in_value">取值中.</string>
    <string name="k_value">倍\u3000\u3000率</string>
    <string name="event_id">事件号</string>
    <string name="is_auto_show">\u3000是否自动弹出</string>
    <string name="add_title">附加信息</string>
    <string name="add_user_title">添加用户</string>
    <string name="edit_user_title">编辑用户信息</string>
    <string name="full_name">名称*</string>
    <string name="password">密码</string>
    <string name="repassword">重复密码</string>
    <string name="accout_user">账号*</string>
    <string name="password_user">密码*</string>
    <string name="repassword_user">重复密码*</string>
    <string name="login_title">Login</string>
    <string name="login_user_name">用户名:</string>
    <string name="login_user_password">PassWord:</string>
    <string name="login">Log On</string>
    <string name="username_notnull">用户名不能为空</string>
    <string name="password_notnull">密码不能为空</string>
    <string name="user_not_exist">账号不存在</string>
    <string name="password_error">密码错误</string>
    <string name="filter_title">筛选</string>
    <string name="start_time">开始时间</string>
    <string name="end_time">结束时间</string>
    <string name="filter">\u3000筛选\u3000</string>
    <string name="normal">正常</string>
    <string name="not_supporte">暂不支持</string>
    <string name="refresh">刷新</string>
    <string name="out">导出</string>
    <string name="in">导入</string>
    <string name="daily_table">日报表</string>
    <string name="monthly_table">月报表</string>
    <string name="year_table">年报表</string>
    <string name="rate">良品率</string>
    <string name="code_p">测量程序</string>
    <string name="group_size">子组大小</string>
    <string name="group_num">子组数</string>
    <string name="time_mode">时间区间</string>
    <string name="num">序号</string>
    <string name="code_base_info">基本信息</string>
    <string name="code_force_cailbration">触发条件</string>
    <string name="code_workpiece_pic">工件图</string>
    <string name="code_step">分步策略</string>
    <string name="code_discrimination">判异</string>
    <string name="machine_tool">机床</string>
    <string name="spare_parts">零件</string>
    <string name="code_step_title">分步测量</string>
    <string name="step_1">步骤一</string>
    <string name="step_2">步骤二</string>
    <string name="step_3">步骤三</string>
    <string name="step_4">步骤四</string>
    <string name="remember_password">记住密码</string>
    <string name="quick_login">快速登入</string>
    <string name="factory_code">工厂编号</string>
    <string name="factory_name">工厂名称</string>
    <string name="device_info">设备信息</string>
    <string name="default_factory_code">NT1001</string>
    <string name="default_factory_name">质量管理平台</string>
    <string name="manufacturer">制造商</string>
    <string name="manufacturer_name">恩梯科技</string>
    <string name="device_name">设备名称</string>
    <string name="default_device_name">物联网量仪</string>
    <string name="device_code">设备编号</string>
    <string name="default_device_code">02</string>
    <string name="software_version">软件版本</string>
    <string name="kernel_version">内核版本</string>
    <string name="android_version">Android版本</string>
    <string name="default_kernel_version">v1.0</string>
    <string name="base_version">内部版本</string>
    <string name="wifi_str">Wifi</string>
    <string name="code_set">程序详细设置</string>
    <string name="step_tips">步骤%1$d取值</string>
    <string name="over_tips">Ch%1$d测量倍率超过设定范围，无法保存.</string>
    <string name="input_fail">输入异常，请检查</string>
    <string name="parameter_name">参数名</string>
    <string name="show_item">显示项</string>
    <string name="limit">权限</string>
    <string name="instruction_book">打开说明书</string>
    <string name="number_format_tips">数据异常，保存失败，请检查。</string>
    <string name="logout">注销</string>
    <string name="workpiece_pic">工件图</string>
    <string name="add_workpiece_pic">选择图片</string>
    <string name="upgrade">升级</string>
    <string name="no_more_version">当前已是最新版本</string>
    <string name="ip_address">服务端IP</string>
    <string name="cancellation">注销</string>
    <string name="exit">退出</string>
    <string name="quit">返回</string>
    <string name="sure_clear">确认清除分步设置？</string>
    <string name="set_as_current">设为当前</string>
    <string name="is">是</string>
    <string name="not">否</string>
    <string name="condition_name">条\u2000件\u2000名</string>
    <string name="getvalue">取值方式</string>
    <string name="stable_time">持续时间</string>
    <string name="is_scale">系数</string>
    <string name="parameter">参数</string>
    <string name="is_parameter">参\u3000\u3000数</string>
    <string name="add_condition">添加条件</string>
    <string name="ratio">比例</string>
    <string name="is_ratio">比\u3000\u3000例</string>
    <string name="stable">系\u3000\u3000数</string>
    <string name="edit_condition">编辑条件</string>
    <string name="max">Max</string>
    <string name="min">Min</string>
    <string name="comma">,</string>
    <string name="dif">Dif</string>
    <string name="export_excel">编辑/导出</string>
    <string name="Avg">Avg</string>
    <string name="left_brackets">(</string>
    <string name="right_brackets">)</string>
    <string name="back_space">退格</string>
    <string name="press_save">按键保存</string>
    <string name="lmax">LMax</string>
    <string name="lmin">LMin</string>
    <string name="lAvg">LAvg</string>
    <string name="ldif">LDif</string>
    <string name="ok">确定</string>
    <string name="not_supported_same">不支持</string>
    <string name="not_supported_same_msg">不支持过程值与单点值同时测量，请确认。</string>
    <string name="start_get_value">开始取过程值</string>
    <string name="start_get_process_value">开始步骤%1$d取值</string>
    <string name="stop_get_value">结束取过程值</string>
    <string name="stop_get_process_value">结束步骤%1$d取值</string>
    <string name="not_supported_same_msg_by_step">不支持过程值与单点值同时测量，在分步第%1$d，请确认。</string>
    <string name="is_enable">启\u3000用</string>
    <string name="add_parameter">添加参数</string>
    <string name="pic">图例</string>
    <string name="group_name">分组名称</string>
    <string name="upper_limit_not_space">上限</string>
    <string name="lower_limit_not_space">下限</string>
    <string name="m_type">测试类型</string>
    <string name="machine_info">机床信息</string>
    <string name="process_no">工序号\u3000</string>
    <string name="authority_group">权限组名</string>
    <string name="remarks">备注</string>
</resources>