<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="550dp"
    android:layout_height="match_parent"
    android:background="@drawable/dialog_corner_bg"
    android:orientation="vertical">

    <TextView
        android:id="@+id/code_tv"
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:background="#ffffff"
        android:gravity="right|bottom"
        android:hint=""
        android:textColor="#000000"
        android:textSize="40sp" />

    <LinearLayout
        android:id="@+id/relative"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/max_btn"
                style="@style/ButtonStyle"
                android:text="@string/max" />

            <Button
                android:id="@+id/min_btn"
                style="@style/ButtonStyle"
                android:text="@string/min" />

            <Button
                android:id="@+id/avg_btn"
                style="@style/ButtonStyle"
                android:text="@string/Avg" />

            <Button
                android:id="@+id/dif_btn"
                style="@style/ButtonStyle"
                android:text="@string/dif" />

            <Button
                android:id="@+id/btn_clear"
                style="@style/ButtonStyle"
                android:text="@string/btn_clear" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/ch1_btn"
                style="@style/ButtonStyle"
                android:text="@string/ch1" />

            <Button
                android:id="@+id/btn_7"
                style="@style/ButtonStyle"
                android:text="@string/btn_7" />

            <Button
                android:id="@+id/btn_8"
                style="@style/ButtonStyle"
                android:text="@string/btn_8" />

            <Button
                android:id="@+id/btn_9"
                style="@style/ButtonStyle"
                android:text="@string/btn_9" />

            <Button
                android:id="@+id/back_space_btn"
                style="@style/ButtonStyle"
                android:text="@string/back_space" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/ch2_btn"
                style="@style/ButtonStyle"
                android:text="@string/ch2" />

            <Button
                android:id="@+id/btn_4"
                style="@style/ButtonStyle"
                android:text="@string/btn_4" />

            <Button
                android:id="@+id/btn_5"
                style="@style/ButtonStyle"
                android:text="@string/btn_5" />

            <Button
                android:id="@+id/btn_6"
                style="@style/ButtonStyle"
                android:text="@string/btn_6" />

            <Button
                android:id="@+id/btn_plus"
                style="@style/ButtonStyle"
                android:text="@string/btn_plus" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/ch3_btn"
                style="@style/ButtonStyle"
                android:text="@string/ch3" />

            <Button
                android:id="@+id/btn_1"
                style="@style/ButtonStyle"
                android:text="@string/btn_1" />

            <Button
                android:id="@+id/btn_2"
                style="@style/ButtonStyle"
                android:text="@string/btn_2" />

            <Button
                android:id="@+id/btn_3"
                style="@style/ButtonStyle"
                android:text="@string/btn_3" />

            <Button
                android:id="@+id/btn_minus"
                style="@style/ButtonStyle"
                android:text="@string/btn_minus" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/ch4_btn"
                style="@style/ButtonStyle"
                android:text="@string/ch4" />

            <Button
                android:id="@+id/btn_0"
                style="@style/ButtonStyle"
                android:text="@string/btn_0" />

            <Button
                android:id="@+id/btn_multiply"
                style="@style/ButtonStyle"
                android:text="@string/btn_multiply" />

            <Button
                android:id="@+id/btn_divide"
                style="@style/ButtonStyle"
                android:text="@string/btn_divide" />

            <Button
                android:id="@+id/comma_btn"
                style="@style/ButtonStyle"
                android:text="@string/comma" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <Button
                android:id="@+id/left_brackets_btn"
                style="@style/ButtonStyle"
                android:text="@string/left_brackets" />

            <Button
                android:id="@+id/right_brackets_btn"
                style="@style/ButtonStyle"
                android:text="@string/right_brackets" />

            <Button
                android:id="@+id/radix_point_btn"
                style="@style/ButtonStyle"
                android:text="." />

            <Button
                style="@style/ButtonStyle"
                android:text="" />

            <Button
                android:id="@+id/btn_ok"
                style="@style/ButtonStyle"
                android:text="ok" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>