<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/data_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:minHeight="@dimen/item_height"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/check_box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="12dp"
        android:gravity="center"
        android:src="@mipmap/ic_uncheck"
        android:visibility="visible" />

    <TextView
        android:id="@+id/data_num"
        style="@style/DataTextStyle"
        android:layout_width="@dimen/data_width"
        android:layout_height="match_parent" />

    <TextView
        android:id="@+id/data_handler"
        style="@style/DataTextStyle"
        android:layout_width="@dimen/data_width"
        android:layout_height="match_parent"
        android:text="@string/handler" />

    <TextView
        android:id="@+id/data_time"
        style="@style/DataTextStyle"
        android:layout_width="100dp"
        android:layout_height="match_parent"
        android:maxLines="2"
        android:text="@string/time" />

    <TextView
        android:id="@+id/data_workpiece_id"
        style="@style/DataTextStyle"
        android:layout_width="@dimen/data_width"
        android:layout_height="match_parent"
        android:maxLines="3"
        android:text="@string/workpiece_id" />

    <TextView
        android:id="@+id/data_event"
        style="@style/DataTextStyle"
        android:layout_width="@dimen/data_width"
        android:layout_height="match_parent"
        android:text="@string/event" />

    <TextView
        android:id="@+id/data_mtype"
        style="@style/DataTextStyle"
        android:layout_width="@dimen/data_width"
        android:layout_height="match_parent"
        android:text="@string/m_type" />

    <TextView
        android:id="@+id/data_machine_info"
        style="@style/DataTextStyle"
        android:layout_width="@dimen/data_width"
        android:layout_height="match_parent"
        android:text="@string/machine_info" />

    <TextView
        android:id="@+id/data_process_no"
        style="@style/DataTextStyle"
        android:layout_width="@dimen/data_width"
        android:layout_height="match_parent"
        android:text="@string/process_no" />

    <TextView
        android:id="@+id/data_result"
        style="@style/DataTextStyle"
        android:layout_width="@dimen/data_width"
        android:layout_height="match_parent"
        android:text="@string/result" />

</LinearLayout>