<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <include
        layout="@layout/action_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/action_bar_height" />


    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    style="@style/TextStyle"
                    android:layout_width="@dimen/data_width"
                    android:layout_height="match_parent"
                    android:text="@string/handler" />

                <TextView
                    style="@style/TextStyle"
                    android:layout_width="@dimen/data_width"
                    android:layout_height="match_parent"
                    android:text="@string/time" />

                <TextView
                    style="@style/TextStyle"
                    android:layout_width="@dimen/data_width"
                    android:layout_height="match_parent"
                    android:text="@string/workpiece_id" />

                <TextView
                    style="@style/TextStyle"
                    android:layout_width="@dimen/data_width"
                    android:layout_height="match_parent"
                    android:text="@string/event" />

                <TextView
                    style="@style/TextStyle"
                    android:layout_width="@dimen/data_width"
                    android:layout_height="match_parent"
                    android:text="@string/result" />

                <TextView
                    style="@style/TextStyle"
                    android:layout_width="@dimen/data_width"
                    android:layout_height="match_parent"
                    android:text="@string/m1" />

                <TextView
                    style="@style/TextStyle"
                    android:layout_width="@dimen/data_width"
                    android:layout_height="match_parent"
                    android:text="@string/m2" />

                <TextView
                    style="@style/TextStyle"
                    android:layout_width="@dimen/data_width"
                    android:layout_height="match_parent"
                    android:text="@string/m3" />

                <TextView
                    style="@style/TextStyle"
                    android:layout_width="@dimen/data_width"
                    android:layout_height="match_parent"
                    android:text="@string/m4" />

            </LinearLayout>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="12dp" />
        </LinearLayout>

    </HorizontalScrollView>

</LinearLayout>