<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/data_layout"
    android:layout_width="match_parent"
    android:layout_height="70dp"
    android:background="?android:attr/selectableItemBackground"
    android:gravity="center_vertical"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/is_enable_tv"
        style="@style/TextStyle"
        android:layout_width="@dimen/data_width"
        android:layout_height="match_parent"
        android:text="是" />

    <TextView
        android:id="@+id/m_title_tv"
        style="@style/TextStyle"
        android:layout_width="@dimen/data_width"
        android:layout_height="match_parent" />

    <TextView
        android:id="@+id/describe_tv"
        style="@style/TextStyle"
        android:layout_width="@dimen/data_width"
        android:layout_height="match_parent"
        android:text="@string/handler" />

    <TextView
        android:id="@+id/nominal_value_tv"
        style="@style/TextStyle"
        android:layout_width="@dimen/data_width"
        android:layout_height="match_parent"
        android:text="@string/time" />

    <TextView
        android:id="@+id/upper_tolerance_value_tv"
        style="@style/TextStyle"
        android:layout_width="@dimen/data_width"
        android:layout_height="match_parent"
        android:text="@string/workpiece_id" />

    <TextView
        android:id="@+id/lower_tolerance_value_tv"
        style="@style/TextStyle"
        android:layout_width="@dimen/data_width"
        android:layout_height="match_parent"
        android:text="@string/event" />

    <TextView
        android:id="@+id/deviation_tv"
        style="@style/TextStyle"
        android:layout_width="@dimen/data_width"
        android:layout_height="match_parent"
        android:text="@string/result" />

    <TextView
        android:id="@+id/resolution_tv"
        style="@style/TextStyle"
        android:layout_width="@dimen/data_width"
        android:layout_height="match_parent"
        android:text="@string/m1" />

    <TextView
        android:id="@+id/formula_tv"
        style="@style/TextStyle"
        android:layout_width="@dimen/data_width"
        android:layout_height="match_parent" />

</LinearLayout>