<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/data_layout"
    android:layout_width="match_parent"
    android:layout_height="70dp"
    android:background="?android:attr/selectableItemBackground"
    android:gravity="center_vertical"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/group_name_tv"
        style="@style/TextStyle"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/group_name" />

    <TextView
        android:id="@+id/upper_limit_tv"
        style="@style/TextStyle"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/upper_limit_not_space" />

    <TextView
        android:id="@+id/lower_limit_tv"
        style="@style/TextStyle"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/lower_limit_not_space" />

    <TextView
        android:id="@+id/describe_tv"
        style="@style/TextStyle"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/describe" />

</LinearLayout>