<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <include
        layout="@layout/action_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/action_bar_height" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:orientation="horizontal"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/accout"
            style="@style/TextStyle"
            />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/TextStyle"
            android:layout_weight="1"
            android:text="@string/name"
            />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/TextStyle"
            android:layout_weight="1"
            android:text="@string/status"
            />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/TextStyle"
            android:layout_weight="1"
            android:text="@string/id"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="@style/TextStyle"
            android:text="@string/email"/>

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="12dp"
        android:layout_marginRight="12dp" />

</LinearLayout>