<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/data_layout"
    android:layout_width="match_parent"
    android:layout_height="@dimen/item_height"
    android:background="?android:attr/selectableItemBackground"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/step_tv"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/show_item"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/condition_tv"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/describe"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/measure_item_tv"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="3"
        android:gravity="center"
        android:text="@string/pic"
        android:textSize="16sp" />

</LinearLayout>